[package]
name = "runtime"
version = "1.2.2"
authors = ["sp1npx <spinpx@gmail.com>"]
edition = "2018"

[lib]
name="runtime"
crate-type = ["rlib", "staticlib"] # "cdylib"

[dependencies]
serde="1.0"
serde_derive = "1.0"
bincode = "1.0"
libc = "0.2"
lazy_static = "1.1"
angora_common = { path = "../common" }

